--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
              <h2>ダウンロード資料</h2>
                <ul>
                   <li><a href="docs/dounyu.pdf" download>導入手順書</a></li>
-                   <li><a href="konjikidou.mcworld" download>金色堂ワールドデータ</a></li>
-                  <li><a href="docs/kyouzai.pdf" download>遊び方資料</a></li>
+                   <li><a href="docs/konjikidou.mcworld" download>金色堂ワールドデータ</a></li>
+                  <li><a href="kyouzai.pdf" download>遊び方資料</a></li>
               </ul>
             </section>
         </main>
